[gd_scene load_steps=5 format=3 uid="uid://b0wfrodl76x8o"]

[ext_resource type="Script" uid="uid://o45cy730qwek" path="res://User Interface/Main Menu/main_menu.gd" id="1_ewoh7"]

[sub_resource type="Gradient" id="Gradient_ewoh7"]
offsets = PackedFloat32Array(0, 0.303103, 1)
colors = PackedColorArray(0, 0, 0, 1, 0.18359, 0.183591, 0.18359, 1, 1, 1, 1, 1)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_mr325"]
frequency = 0.0061
fractal_type = 2
fractal_octaves = 2
fractal_gain = -0.04
domain_warp_fractal_octaves = 6

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_4qsi2"]
width = 1920
height = 1080
seamless = true
seamless_blend_skirt = 0.169
as_normal_map = true
color_ramp = SubResource("Gradient_ewoh7")
noise = SubResource("FastNoiseLite_mr325")

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ewoh7")

[node name="Background" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Background"]
position = Vector2(263, 264)
texture = SubResource("NoiseTexture2D_4qsi2")
offset = Vector2(697, 276)

[node name="CanvasModulate" type="CanvasModulate" parent="Background"]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(400, 200)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -126.0
offset_right = 250.0
offset_bottom = 126.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="StartButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_vertical = 3
text = "Start"

[node name="SettingsButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_vertical = 3
text = "Settings"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_vertical = 3
text = "Quit"

[node name="Test Scene" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_vertical = 3
text = "Test Scene"

[connection signal="focus_exited" from="VBoxContainer/StartButton" to="." method="_on_hover"]
[connection signal="mouse_entered" from="VBoxContainer/StartButton" to="." method="_on_hover"]
[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="focus_exited" from="VBoxContainer/SettingsButton" to="." method="_on_hover"]
[connection signal="mouse_entered" from="VBoxContainer/SettingsButton" to="." method="_on_hover"]
[connection signal="pressed" from="VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="focus_exited" from="VBoxContainer/QuitButton" to="." method="_on_hover"]
[connection signal="mouse_entered" from="VBoxContainer/QuitButton" to="." method="_on_hover"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="focus_exited" from="VBoxContainer/Test Scene" to="." method="_on_hover"]
[connection signal="mouse_entered" from="VBoxContainer/Test Scene" to="." method="_on_hover"]
[connection signal="pressed" from="VBoxContainer/Test Scene" to="." method="_on_test_scene_pressed"]
